# icub-traj-players

./: CMakeLists.txt  README.md
upperBodyPlayer/: CMakeLists.txt  upperBodyPlayer.cpp
upperBodyPlayer/trajectories/: trajectory.txt  ugo_trajectory.txt
